--- a/resources/index.html
+++ b/resources/index.html
@@ -2,57 +2,97 @@
 <html>
 <head>
     <title>Server Manager</title>
+    <link rel="icon" type="image/x-icon" href="icons/server-manager.ico">
     <link rel="stylesheet" href="styles.css">
-    <script src="js/services/CommandScanner.js"></script>
-    <script src="js/services/TokenService.js"></script>
-    <script src="js/neutralino.js"></script>
-    <script src="js/main.js"></script>
 </head>
 <body>
-    <div class="titlebar">
-        <div class="bot-profile">
-            <img id="botAvatar" src="assets/default-avatar.png" alt="Bot Avatar">
-            <div class="bot-info">
-                <span id="botName">Not Connected</span>
-                <span id="botId" class="bot-id">ID: --</span>
-            </div>
-        </div>
-        <div class="window-controls">
-            <button class="icon-button settings-btn" onclick="toggleSettings()">
-                <img src="assets/settings-btn.png" alt="Settings">
-            </button>
-        </div>
-    </div>
-
-    <div class="content">
-        <div class="status-section">
-            <div class="status-card">
-                <div class="status-indicator">
-                    <span id="statusDot" class="status-dot offline"></span>
-                    <span id="statusText">Offline</span>
+    <!-- Loading Screen -->
+    <div id="loadWindow" class="loading-window">
+        <div class="loading-container">
+            <div class="profile-frame">
+                <div class="avatar-circle">
+                    <img src="icons/server-manager.ico" alt="Bot" class="bot-avatar">
+                    <div class="progress-ring"></div>
                 </div>
-                <div class="version">v1.0.0</div>
             </div>
-            <div class="uptime-display">
-                <span class="label">Uptime</span>
-                <span id="uptime">0:00:00</span>
+            <div class="loading-info">
+                <div class="loading-title">Server Manager</div>
+                <div class="loading-progress">
+                    <div class="progress-bar">
+                        <div class="progress-fill"></div>
+                    </div>
+                    <div class="loading-status">Initializing...</div>
+                    <div class="loading-text">Please wait</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main Window -->
+    <div id="mainWindow" class="main-window hidden">
+        <!-- Title Bar -->
+        <div class="titlebar">
+            <div class="title">
+                <img src="icons/server-manager.ico" alt="Logo" class="title-logo">
+                <span>Server Manager</span>
+            </div>
+            <div class="window-controls">
+                <button id="minimize" class="frame-button">─</button>
+                <button id="maximize" class="frame-button">□</button>
+                <button id="close" class="frame-button">✕</button>
             </div>
         </div>
 
-        <div class="control-section">
-            <button id="startBot" class="action-button primary ripple">
-                <span class="button-content">
-                    <i class="icon">▶</i>
-                    <span>Start Bot</span>
-                </span>
-            </button>
-            <button id="stopBot" class="action-button danger ripple" disabled>
-                <span class="button-content">
-                    <i class="icon">⬛</i>
-                    <span>Stop Bot</span>
-                </span>
-            </button>
+        <div class="main-layout">
+            <div class="sidebar">
+                <!-- Bot Status Section -->
+                <div class="bot-status-panel">
+                    <div class="profile-section">
+                        <img id="botAvatar" src="icons/default-bot.ico" alt="Bot Avatar">
+                        <div id="botInfo">
+                            <div id="botName">Server Manager</div>
+                            <div id="botStatus" class="status offline">
+                                <span class="status-dot"></span>
+                                <span id="statusText">Offline</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Control Buttons -->
+                <div class="control-buttons">
+                    <button id="startBot" class="control-btn primary">Start Bot</button>
+                    <button id="stopBot" class="control-btn danger" disabled>Stop Bot</button>
+                </div>
+            </div>
+
+            <div class="main-content">
+                <!-- Stats Panel -->
+                <div class="stats-panel">
+                    <div class="stat-card">
+                        <div class="stat-label">Uptime</div>
+                        <div id="uptime" class="stat-value">0:00:00</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Servers</div>
+                        <div id="serverCount" class="stat-value">0</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-label">Commands</div>
+                        <div id="commandCount" class="stat-value">0</div>
+                    </div>
+                </div>
+
+                <!-- Recent Activity -->
+                <div class="activity-section">
+                    <h3>Recent Activity</h3>
+                    <div id="activityLog" class="activity-log"></div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <script src="js/neutralino.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
